kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: car-finder-sa
      containers:
      - name: backend
        image: us-central1-docker.pkg.dev/jmacleod-42/car-finder-agent-repo/backend:v18
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: car-finder-db
          mountPath: "/app/database"
      - name: ollama
        image: ollama/ollama
        ports:
        - containerPort: 11434
      volumes:
      - name: car-finder-db
        persistentVolumeClaim:
          claimName: car-finder-db-pvc
