kubernetes/ollama-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-nodeport-service
  namespace: ollama
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ollama
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
